Mocking up some tests. Couldn't get Google Test Framework to build properly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,10 @@ project(ramp)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES Source/main.cpp Source/Display.cpp Headers/constants.h)
-add_executable(ramp ${SOURCE_FILES})
+add_executable(test_ramper src/Display.cpp src/functions.cpp src/RGB565.cpp
+        tests/RGB565_tests.h tests/RGB565_tests.cpp tests/functions_tests.h tests/functions_tests.cpp
+        tests/tests.cpp)
+
+set(HEADER_FILES headers/constants.h headers/Display.h headers/functions.h headers/RGB565.h)
+set(SOURCE_FILES src/main.cpp src/Display.cpp src/functions.cpp src/RGB565.cpp)
+add_executable(run_ramper ${HEADER_FILES} ${SOURCE_FILES})
